--- a/src/components/pages/rules/flyouts/ruleNew/ruleNew.scss
+++ b/src/components/pages/rules/flyouts/ruleNew/ruleNew.scss
@@ -41,8 +41,8 @@
   }
 
   .delete-btn {
-    @include rem-fallback(margin-left, 0px);
-    @include rem-fallback(padding-left, 0px);
+    margin-left: 0px;
+    padding-left: 0px;
     @include rem-fallback(padding-top, 24px);
   }
 }
