--- a/src/components/pages/devices/flyouts/deviceJobs/deviceJobs.scss
+++ b/src/components/pages/devices/flyouts/deviceJobs/deviceJobs.scss
@@ -34,9 +34,7 @@
   @include themify($themes) {
     color: themed('colorContentTextDim');
 
-    .device-jobs-error {
-      border-color: themed('colorAlarm');
-    }
+    .device-jobs-error { border-color: themed('colorAlarm'); }
 
     .summary-icon svg { fill: themed('colorContentText'); }
   }
